<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_filtro"
        android:textSize="22dp"
        android:layout_marginVertical="30dp"
        android:layout_marginStart="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <CheckBox
            android:id="@+id/cb_hospitais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_hospital"
            android:textSize="18sp"
            android:drawableRight="@drawable/icon_hospital"
            android:drawablePadding="15dp"
            android:onClick="onCheckboxClicked"/>

        <TextView
            android:id="@+id/iv_line1"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#bfbfbf"
            android:layout_marginTop="10dp"
            />

        <CheckBox
            android:id="@+id/cb_bares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_bar"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/icon_bar"
            android:drawablePadding="15dp"
            android:onClick="onCheckboxClicked"/>

        <TextView
            android:id="@+id/iv_line2"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#bfbfbf"
            android:layout_marginTop="10dp"
            />

        <CheckBox
            android:id="@+id/cb_hoteis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_hotel"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/icon_hotel"
            android:drawablePadding="15dp"
            android:onClick="onCheckboxClicked"/>

        <TextView
            android:id="@+id/iv_line3"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="#bfbfbf"
            android:layout_marginTop="10dp"
            />

        <CheckBox
            android:id="@+id/cb_parques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_parque"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/icon_park"
            android:drawablePadding="15dp"
            android:layout_marginBottom="25dp"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>



</LinearLayout>