<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.LoginScreen"
    android:background="@drawable/imagem_de_fundo">

    <TextView
        android:id="@+id/tv_bemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login1"
        android:textSize="60dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="600dp"
        android:layout_marginStart="35dp"/>

    <TextView
        android:id="@+id/tv_devolta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login2"
        android:textSize="60dp"
        android:textColor="@color/white"
        android:layout_marginStart="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bemvindo" />

    <TextView
        android:id="@+id/white_box"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
         />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="360dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        android:layout_marginBottom="135dp"
        android:backgroundTint="#2C73DD"
        android:hint="@string/hint_email"
        android:textColor="#2C73DD"
        />

    <ImageView
        android:id="@+id/vector_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_email"
        app:layout_constraintTop_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="325dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:hint="@string/hint_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2C73DD"
        android:textColor="#2C73DD"
        android:inputType="textPassword"
        />

    <ImageView
        android:id="@+id/vector_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_cadeado"
        app:layout_constraintTop_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="325dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_esqueci_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="210dp"
        android:text="@string/esqueci_senha"
        android:textColor="#2C73DD"
        android:textStyle="bold"
        android:textSize="15dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="#2C73DD"
        android:text="@string/bt_acessar"
        android:textColor="@color/white"
        app:backgroundTint="#2C73DD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_devolta"
        android:onClick="login"/>

    <ImageView
        android:layout_width="270dp"
        android:layout_height="15dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/ic_divis_ria"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:background="@drawable/round_shape"
        android:text="@string/bt_criar_conta"
        android:textColor="@color/black"
        app:backgroundTint="#f2f2f2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:onClick="signup"/>

</androidx.constraintlayout.widget.ConstraintLayout>