<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SignUpScreen"
    android:background="@drawable/imagem_de_fundo">

    <TextView
        android:id="@+id/tv_criasua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="600dp"
        android:layout_marginStart="35dp"
        android:text="@string/txt_cria"
        android:textColor="@color/white"
        android:textSize="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_conta"
        android:textSize="60dp"
        android:textColor="@color/white"
        android:layout_marginStart="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_criasua"/>

    <TextView
        android:id="@+id/white_box"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#2C73DD"
        android:hint="@string/hint_nome"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_conta"
        android:layout_marginTop="130dp"
        android:textColor="#2C73DD"
        />

    <ImageView
        android:id="@+id/vector_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_icon_user"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_conta"
        android:layout_marginTop="115dp"
        android:layout_marginLeft="325dp"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="360dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_crateacc"
        android:layout_marginBottom="135dp"
        android:backgroundTint="#2C73DD"
        android:hint="@string/hint_email"
        android:textColor="#2C73DD"
        />

    <ImageView
        android:id="@+id/vector_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_email"
        app:layout_constraintTop_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="325dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:hint="@string/hint_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2C73DD"
        android:textColor="#2C73DD"

        />

    <ImageView
        android:id="@+id/vector_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_cadeado"
        app:layout_constraintTop_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="325dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btn_crateacc"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="#2C73DD"
        android:text="@string/bt_criar"
        app:backgroundTint="#2C73DD"
        
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_conta"
        android:onClick="create_acc"/>

    <ImageView
        android:layout_width="270dp"
        android:layout_height="15dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/ic_divis_ria"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_crateacc" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:background="@drawable/round_shape"
        android:text="@string/bt_acessar"
        android:textColor="@color/black"
        app:backgroundTint="#f2f2f2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_crateacc"
        android:onClick="login"/>

</androidx.constraintlayout.widget.ConstraintLayout>