<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.CreateTripScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:background="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="13dp"
            android:layout_marginRight="7dp"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/iv_line"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            android:background="#bfbfbf"
            android:layout_marginTop="12dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textColor="@color/white"
            android:backgroundTint="#2EBCA9"
            android:background="@drawable/round_shape"
            android:text="@string/btn_partida"
           />

        <Button
            android:id="@+id/btn_end"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="#2EBCA9"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_shape"
            android:text="@string/btn_chegada"
           />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/btn_filtros"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_filtros"
                android:layout_marginEnd="50dp"
                android:backgroundTint="#2C73DD"
                android:textColor="@color/white"
                android:background="@drawable/round_shape"
                android:onClick="filters"/>

            <Button
                android:id="@+id/btn_viajar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_ir"
                android:backgroundTint="#2C73DD"
                android:textColor="@color/white"
                android:background="@drawable/round_shape"
                android:onClick="viajar"/>

        </LinearLayout>

        <fragment
            android:id="@+id/mapCreateTrip"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_marginTop="23dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#F5F5F5"/>

    <ImageButton
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginRight="330dp"
        android:onClick="back_home"/>

    <ImageButton
        android:id="@+id/btn_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_directions_car_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginRight="180dp"
        android:onClick="back_last_trip"/>

    <ImageButton
        android:id="@+id/btn_newtrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="back_create_trip"
        />

    <ImageButton
        android:id="@+id/btn_trips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_map_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginLeft="180dp"
        android:onClick="back_itinerario"/>


    <ImageButton
        android:id="@+id/btn_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_supervisor_account_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginLeft="330dp"
        android:onClick="profile"/>


</androidx.constraintlayout.widget.ConstraintLayout>