<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.PostScreen">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:background="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="13dp"
        android:layout_marginRight="7dp" />

    <TextView
        android:id="@+id/iv_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        android:background="#cccccc"
        android:layout_marginTop="12dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_clear_24"
        app:layout_constraintTop_toBottomOf="@id/iv_line"
        app:layout_constraintBottom_toTopOf="@id/iv_extraline"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="22dp"
        android:onClick="back_home"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/round_shape_button"
        app:backgroundTint="#2C73DD"
        android:text="@string/bt_publicar"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/iv_line"
        app:layout_constraintBottom_toTopOf="@id/iv_extraline"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="33dp"
        android:onClick="publish"/>

    <TextView
        android:id="@+id/iv_extraline"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="#bfbfbf"
        android:layout_marginTop="95dp"
        app:layout_constraintTop_toBottomOf="@id/iv_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_extraline"
        android:hint="@string/hint_titulo"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="300dp"
        android:src="@drawable/azaghal"
        app:civ_border_color="#FF000000"
        app:civ_border_width="0.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_title"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fulano da Silva"
        android:textSize="15dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/et_title"
        android:layout_marginTop="45dp"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/et_body"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        android:layout_marginTop="35dp"
        android:hint="@string/hint_post"
        />

    <Button
        android:id="@+id/btn_adicionar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="165dp"
        android:background="@drawable/round_shape"
        android:textColor="@color/white"
        android:text="@string/bt_add_viagem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="addTrip"
        />


    <TextView
        android:id="@+id/tv_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#e6e6e6"/>


    <ImageButton
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_home_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginRight="330dp"/>

    <ImageButton
        android:id="@+id/btn_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_directions_car_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginRight="180dp"/>

    <ImageButton
        android:id="@+id/btn_newtrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_trips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_map_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginLeft="180dp"/>


    <ImageButton
        android:id="@+id/btn_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_baseline_supervisor_account_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        android:layout_marginLeft="330dp" />



</androidx.constraintlayout.widget.ConstraintLayout>